--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll",
     "start": "node index",
     "dev": "nodemon index -q"
   },
@@ -16,6 +16,7 @@
     "dotenv": "^10.0.0",
     "eslint-config-prettier": "^8.3.0",
     "express": "^4.17.1",
+    "jest": "^27.3.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0"
   },
