--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "debug": "^4.3.2",
@@ -18,6 +19,7 @@
     "eslint-config-prettier": "^8.3.0",
     "express": "^4.17.1",
     "jest": "^27.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0"
   },
